--- a/docker-compose-yarn.yml
+++ b/docker-compose-yarn.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   spk_cli:
-    image: mkenjis/ubpyspk_img
+    image: mkenjis/ubpyspkcli_yarn_img
     deploy:
       placement:
         constraints:
